2023-02-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	Correct numerous typos and solecisms throughout the source tree.

	* ChangeLog:
	* ChangeLog.115:
	* ChangeLog.116:
	* ChangeLog.117:
	* ChangeLog.118:
	* ChangeLog.119:
	* ChangeLog.121:
	* ChangeLog.122:
	* Makefile.am:
	* NEWS:
	* PROBLEMS:
	* README:
	* contrib/chem/chem.am:
	* contrib/chem/chem.pl:
	* contrib/glilypond/README.txt:
	* contrib/glilypond/glilypond.pl:
	* contrib/hdtbl/groff_hdtbl.7.man:
	* contrib/mm/ChangeLog:
	* contrib/mm/m.tmac:
	* contrib/pdfmark/pdfmark.ms:
	* doc/automake.mom:
	* doc/groff.texi:
	* doc/me-revisions:
	* doc/webpage.ms:
	* m4/lib-link.m4:
	* man/groff.7.man:
	* man/groff_diff.7.man:
	* man/roff.7.man:
	* src/devices/grohtml/post-html.cpp:
	* src/devices/grolbp/lbp.h:
	* src/devices/gropdf/TODO:
	* src/devices/gropdf/gropdf.1.man:
	* src/devices/gropdf/gropdf.pl:
	* src/devices/xditview/ChangeLog:
	* src/devices/xditview/xditview.c:
	* src/libs/libdriver/input.cpp:
	* src/libs/libgroff/glyphuni.cpp:
	* src/preproc/eqn/eqn.1.man:
	* src/preproc/grn/gprint.h:
	* src/preproc/grn/main.cpp:
	* src/preproc/html/pre-html.cpp:
	* src/preproc/preconv/preconv.cpp:
	* src/preproc/tbl/table.cpp:
	* src/roff/groff/pipeline.c:
	* src/roff/groff/tests/substring_works.sh:
	* src/roff/groff/tests/
	use_point_size_escape_with_single_digit_arg.sh:
	* src/roff/troff/div.cpp:
	* src/roff/troff/input.cpp:
	* src/roff/troff/troff.1.man:
	* src/utils/grog/grog.pl:
	* src/utils/indxbib/indxbib.cpp:
	* src/utils/tfmtodit/tfmtodit.1.man:
	* tmac/doc-old.tmac:
	* tmac/doc.tmac:
	* tmac/groff_man.7.man.in:
	* tmac/hyphen.fr: Do it.

	Fixes <https://savannah.gnu.org/bugs/?63589>.  Thanks to Bjarni
	Ingi Gislason for the report.

2023-02-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Drop XFAIL test.  It was written with an unclear
	understanding of how DWB (AT&T) and Heirloom Doctools troff
	behaved.  The individual checks might come back, modified.
